force-app/main/default/objects/Child_Test_Object__c/Child_Test_Object__c.object-meta.xml
<CustomObject>
    <label>Child Test Object</label>
    <nameField>
        <label>Child Test Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Test Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>