force-app/main/default/objects/Child_Test_Object__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Child Test Objects</relationshipLabel>
    <relationshipName>Child_Test_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>