force-app/main/default/objects/Child_Test_Object__c/fields/Parent_Test_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Test_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Test Object</label>
    <referenceTo>Parent_Test_Object__c</referenceTo>
    <relationshipLabel>Child Test Objects</relationshipLabel>
    <relationshipName>Child_Test_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>