force-app/main/default/objects/Child_Test_Object__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no clue</fullName>
            </value>
            <value>
                <fullName>dead</fullName>
            </value>
            <value>
                <fullName>cold</fullName>
            </value>
            <value>
                <fullName>warm</fullName>
            </value>
            <value>
                <fullName>hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>