force-app/main/default/objects/Child_Test_Object__c/fields/StatusF__c.field-meta.xml
<CustomField>
    <fullName>StatusF__c</fullName>
    <formula>TEXT(Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StatusF</label>
    <type>Text</type>
</CustomField>